fix overlapping of elements in certain views

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -402,6 +402,16 @@ table th.column-last, table td.column-last {
   min-width: 130px;
 }
 
+#app-content-recent,
+#app-content-favorites,
+#app-content-shareoverview,
+#app-content-sharingout,
+#app-content-sharingin,
+#app-content-sharinglinks,
+#app-content-deletedshares,
+#app-content-pendingshares {
+  margin-top: 22px;
+}
 #app-content-recent thead,
 #app-content-favorites thead,
 #app-content-shareoverview thead,
